@@ -63,6 +63,12 @@
     <ClCompile Include="Source\EU3World\EU3Country.cpp">
       <Filter>EU3World</Filter>
     </ClCompile>
+    <ClCompile Include="Source\CK2World\CK2Province.cpp">
+      <Filter>CK2World</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\CK2World\CK2Barony.cpp">
+      <Filter>CK2World</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Log.h">
@@ -100,6 +106,12 @@
     </ClInclude>
     <ClInclude Include="Source\EU3World\EU3Country.h">
       <Filter>EU3World</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CK2World\CK2Province.h">
+      <Filter>CK2World</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CK2World\CK2Barony.h">
+      <Filter>CK2World</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
