@@ -5,18 +5,22 @@
 #include "..\Parsers\Object.h"
 #include "..\Date.h"
 #include "CK2Title.h"
+#include "CK2Province.h"
 
 
 class CK2World
 {
 	public:
-		void					init(Object*);
-		date					getEndDate();
-		vector<CK2Title*>	getIndependentTitles();
+		void							init(Object*);
+		date							getEndDate();
+		vector<CK2Title*>			getIndependentTitles();
+		map<int, CK2Province*>	getProvinces();
 		~CK2World();
 	private:
-		date					endDate;
-		vector<CK2Title*>	independentTitles;
+		date							endDate;
+		vector<CK2Title*>			independentTitles;
+		map<string, CK2Title*>	titles;
+		map<int, CK2Province*>	provinces;
 };
 
 
