@@ -132,9 +132,9 @@ int main(int argc, char * argv[])
 
 
 
-
+	destWorld.convertProvinces(provinceMap, srcWorld.getProvinces(), countryMap);
 	destWorld.setupRotwProvinces(inverseProvinceMap);
-
+	
 
 
 
