@@ -1,9 +1,14 @@
+#ifndef EU3WORLD_H_
+#define EU3WORLD_H_
+
+
 #include <fstream>
 #include "..\Mappers.h"
 #include "..\Date.h"
 #include "EU3Country.h"
 #include "EU3Province.h"
 #include	"..\CK2World\CK2World.h"
+#include "..\CK2World\CK2Province.h"
 
 
 
@@ -12,7 +17,8 @@ class EU3World
 	public:
 		void				output(FILE*);
 		void				init(CK2World);
-		void				setupRotwProvinces(inverseProvinceMapping);
+		void				convertProvinces(provinceMapping, map<int, CK2Province*>, countryMapping);
+		void				setupRotwProvinces(provinceMapping);
 		void				addPotentialCountries(ifstream&, string);
 		vector<string>	getPotentialTags();
 	private:
@@ -20,3 +26,7 @@ class EU3World
 		vector<EU3Province>	provinces;
 		vector<EU3Country>	potentialCountries;
 };
+
+
+
+#endif	// EU3WORLD_H_
