@@ -1,2 +1,8 @@
+#ifndef TEMP_H_
+#define TEMP_H_
+
 
 void outputTempHeader(FILE*);
+
+
+#endif	// TEMP_H_
