@@ -21,3 +21,4 @@ Revision	Log Message
 19		Read in titles
 20		Create tree of vassal/liege relationships
 21		Country Mappings
+22		European province ownership
